--- a/src/components/PageHeader/PageHeader.module.css
+++ b/src/components/PageHeader/PageHeader.module.css
@@ -13,8 +13,6 @@
   gap: var(--spacing-page-header-title-row-gap, 16px);
   width: 100%;
   height: 40px;
-  z-index: 2;
-  position: relative;
 }
 
 .titleWrapper {
@@ -52,8 +50,6 @@
 .supportingRow {
   display: flex;
   width: 100%;
-  z-index: 1;
-  position: relative;
 }
 
 .subtitle {
